# projectChimaera

./: .gitignore  README.txt  log.txt
Config/: README  control2_config.ini  dwncam2_config.ini  fwdcam_config.ini  odom_config.ini  odom_config.ini~
Drivers/adc/: CMakeLists.txt
Drivers/dwncam/: Makefile
Drivers/dwncam2/: CMakeLists.txt  config.ini  manifest.xml
Drivers/fwdcam/: CMakeLists.txt  manifest.xml
Drivers/motor/: CMakeLists.txt  manifest.xml
Drivers/picsubnet/: CMakeLists.txt  manifest.xml
Drivers/sonar/: manifest.xml  sonar.launch  sonar.launch~
Drivers/sonar2/: CMakeLists.txt  mainpage.dox  manifest.xml
Drivers/vNavIMU/: CMakeLists.txt  manifest.xml
High_Level_Nodes/missionTimer/: CMakeLists.txt  mainpage.dox  mainpage.dox~  manifest.xml
High_Level_Nodes/pilot2/: CMakeLists.txt  manifest.xml
Launch/: Imu.launch  Rinzler.launch  Sonar_rosbag.launch  controlTest.launch  controlTest.launch~  fitpc.launch  fitpc.launch~  roboard.launch  roboard.launch~
Launch/2011/: Itx.launch  launch.sh
Misc/INIFile/: CMakeLists.txt  mainpage.dox  manifest.xml
Misc/INIReader/: CMakeLists.txt  mainpage.dox  manifest.xml
Misc/fitpc_sensors/: sensors.sh
Misc/move4films/: CMakeLists.txt  CMakeLists.txt~  motor.h  move4films.cpp  move4films.cpp.1  move4films.cpp~
Roboard/: CMakeLists.txt~  move4films.cpp~
Soft_Nodes/control2/: CMakeLists.txt  manifest.xml
Soft_Nodes/logger/: mainpage.dox
Soft_Nodes/pilotHelper/: CMakeLists.txt  mainpage.dox  manifest.xml  manifest.xml~
Soft_Nodes/sonarInjector/: CMakeLists.txt  mainpage.dox  manifest.xml
(+96 files in other folders)
